# VeinRecognition

./: README.md  ROI_extract.py  ROI_extraction.ipynb  draw.ipynb  finger_train.py  main.ipynb  main.py  palm_train.py  requirements.txt  utils.py  ~$21《机器视觉创新实践》课题研究任务书.docx  附件1_创新实践报告格式.docx
documents/: 2021《机器视觉创新实践》课题研究任务书.docx  手掌ROI伪代码.txt  静脉图像增强方法.txt
documents/LBP匹配/: LBP.h  matchLBP.cpp  matchLBP.h
documents/手指ROI截取/: 静脉截取流程.docx
附件2_参考资料/: 指静脉ROI伪代码.txt
附件2_参考资料/LBP匹配/: LBP.cpp  README.txt
附件2_参考资料/手指ROI截取/: CMakeLists.txt  edge_detection.cpp  edge_detection.h  main.cpp
