CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(Edgedetecte)
SET(CMAKE_BUILD_TYPE "Debug")
# SET(CMAKE_BUILD_TYPE "Release")

AUX_SOURCE_DIRECTORY(. DIR_SRCS)
AUX_SOURCE_DIRECTORY(./common DIR_SRCS1)

INCLUDE_DIRECTORIES("D:/Library/opencv/build-mingw/install/include")
INCLUDE_DIRECTORIES("D:/Library/opencv/build-mingw/install")
INCLUDE_DIRECTORIES("D:/Library/eigen-3.3.7")

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

ADD_EXECUTABLE(${PROJECT_NAME} ${DIR_SRCS} ${DIR_SRCS1})
SET(OpenCV_DIR D:/Library/opencv/build-mingw/install)
FIND_PACKAGE(OpenCV REQUIRED)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OpenCV_LIBS})

